refactor here and there, mostly to take advantage of JDK 21 and fix stupid stuff I did